[package]
name = "cs50"
version = "1.0.1"
description = "CS50 Library for Rust"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/cs50-rust"
repository = "https://github.com/thechampagne/cs50-rust"
keywords = ["cs50"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html